SERVER-4770, changed list of documents to delete to a set.